# SmartOdoo

./: .dockerignore  .env  .gitignore  .gitigonre  CHANGELOG.md  Dockerfile  build_install.sh  config.json  docker-compose.yml  docker_start.ps1  docker_start.py  docker_start.sh  entrypoint.sh  install_docker.sh  launch.json  pyproject.toml  readme.md  repos.txt  requirements.txt  smartodoo.py  smartodoo_gui.py  smartodoo_view.xml  tools.py
.agents/: TEAM_RULES.md
.agents/_backup_20260311_003059/.agents/: TEAM_RULES.md
.agents/workflows/: anal.md  arch.md  deploy.md  dev.md  pm.md  pol.md  qa.md  scout.md  sec.md  so.md
app/: setup.py
app/core/: smartodoo.py  smartodoo_gui.py  tools.py  updater.py  version.py
docs/blueprint/: 00_master_knowledge_map.md
docs/sprints/: 2026-03-11_PM-01_SmartOdoo_V1_sprint.md  2026-03-11_PM-02_Docker_Odoo_RCA_sprint.md
psql/: postmaster.opts  postmaster.pid
psql/base/1/: 1259  2619  (+6 more)
psql/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
scripts/: build.sh  build_install.sh
smartodoo/core/: cli.py  config.py  db_ops.py  docker_hub.py  docker_manager.py  docker_ops.py  env_builder.py  filestore.py  git_manager.py  health_check.py
smartodoo/gui/: app.py
smartodoo/templates/: docker-compose.yml.j2  entrypoint.sh.j2  odoo.conf.j2
tests/: conftest.py  test_cli.py  test_config.py  test_docker_hub.py  test_docker_manager.py  test_env_builder.py
tests/unit/: test_cli_hardening.py  test_config.py  test_db_ops.py  test_docker_ops.py  test_env_builder.py  test_filestore.py  test_health_check.py  test_platform.py
(+344 files in other folders)
