[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smartodoo"
version = "0.1.0"
description = "Lightweight and fully testable Command Line Interface for Odoo Docker Environments"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "customtkinter>=5.2.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["smartodoo*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0"
]

[project.scripts]
so = "smartodoo.core.cli:main"
smartodoo = "smartodoo.core.cli:main"

[tool.pytest.ini_options]
addopts = "-v --cov=smartodoo --cov-report=term-missing"
testpaths = [
    "tests"
]
asyncio_mode = "auto"
